# quantum-array

./: .gitignore  README.md  README_CN.md  example.py  pyproject.toml
qarray/: __init__.py  core.py  errors.py
tests/: qarray_test.py  test_rect.py  test_rhom.py
